<resources>
    <string name="app_name">MedTrack</string>
    <string name="login">Login</string>
    <string name="email_id">Email_ID</string>
    <string name="register_email_id">Email_ID</string>
    <string name="password">Password</string>
    <string name="register_password">Password</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="pharmacy_name">Pharmacy_Name</string>
    <string name="mobile">Mobile</string>
    <string name="register">Register</string>
    <string name="product">Product</string>
    <string name="account">Account</string>
    <string name="insert_products">To Stock</string>
    <string name="view_update_delete_products">To Sell And Search</string>
    <string name="product_name">Product Name</string>
    <string name="buying_price">Buying Price</string>
    <string name="selling_price">Selling Price</string>
    <string name="quantity">Quantity</string>
    <string name="company_name">Company Name</string>
    <string name="expired_date">Expired Date</string>
    <string name="buying_date">Buying Date</string>
    <string name="insert">Insert</string>
    <string name="search_for_a_medicine">Search for a medicine</string>
    <string name="search">Search</string>
    <string name="vdu_product_name">Product Name:</string>
    <string name="vdu_buying_price">Buying Price:</string>
    <string name="n_a">N/A</string>
    <string name="vdu_quantity">Quantity:</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="sell">Sell</string>
    <string name="vdu_buying_date">Buying Date:</string>
    <string name="vdu_expired_date">Expired Date:</string>
    <string name="vdu_company_name">Company Name:</string>
    <string name="vdu_selling_price">Selling Price:</string>
    <string name="confirm_sell">Confirm Sell</string>
    <string name="quantity_to_sell">Quantity to Sell</string>
    <string name="sell_product">Sell Product</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter">Enter</string>
    <string name="set_password">Set Password</string>
    <string name="btn_set_password">Set Password</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="string_logout">Logout</string>
</resources>
